seperated code, added some for tracking the images - going to keep these in the debug phase (#11)
